--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,24 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.idea/
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+/out/
+.idea_modules/
+
+## File-based project format:
+*.iws
+*.iml
+*.ipr
+
+.DS_Store
+*/.DS_Store
