--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.3.6</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-tx</artifactId>-->
+<!--            <version>5.3.5</version>-->
+<!--        </dependency>-->
+
 
 
         <!--jackson-->
